--- a/frontend_sl/registration/templates/registration/login.html
+++ b/frontend_sl/registration/templates/registration/login.html
@@ -40,9 +40,9 @@
                                         {{ login_form.password }}
                                     </div>
                                     <button type="submit" class="btn btn-theme">Login</button>
-                                    <!--
-                                    <a href="#l" class="forgot-link float-right text-primary">Forgot password?</a>
-                                -->
+
+                                    <a href="{% url 'registration:reset_email' %}" class="forgot-link float-right text-primary">Forgot password?</a>
+
                                 </form>
                             </div>
                         </div>
