--- a/frontend_sl/home/templates/home/index.html
+++ b/frontend_sl/home/templates/home/index.html
@@ -1,1 +1,9 @@
-<h1>Home</h1>
+{% extends 'home/base.html' %}
+{% load static %}
+
+{% block title %}
+Home
+{% endblock %}
+{% block content %}
+<h1>home</h1>
+{% endblock %}
