--- a/frontend_sl/home/templates/home/index.html
+++ b/frontend_sl/home/templates/home/index.html
@@ -4,6 +4,176 @@
 {% block title %}
 Home
 {% endblock %}
+{% block css %}
+
+        <link href="{% static 'home/css/home.css' %}" rel="stylesheet" >
+
+{% endblock %}
 {% block content %}
-<h1>home</h1>
+ <!-- Page header with logo and tagline-->
+        <header class="py-5 bg-light border-bottom mb-4">
+            <div class="container">
+                <div class="text-center my-5">
+                    <section class="testimonials text-center bg-light">
+            <div class="container">
+                <h2 class="mb-5">The highest people stars ..</h2>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="{% static 'home/img/Me.png' %}" alt="..." />
+                            <a href="#" class="text-decoration-none"> <h5>Margaret E.</h5> </a>
+                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="{% static 'home/img/Me.png' %}" alt="..." />
+                            <a href="#" class="text-decoration-none"><h5>Fred S.</h5></a>
+                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="{% static 'home/img/Me.png' %}" alt="..." />
+                            <a href="#" class="text-decoration-none"><h5>Sarah W.</h5></a>
+                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+                </div>
+            </div>
+        </header>
+        <!-- Page content-->
+        <div class="container">
+            <div class="row">
+                <!-- Blog entries-->
+                <div class="col-lg-8">
+                    <!-- Featured blog post-->
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 style="text-align: center">Posts</h3>
+                        </div>
+                    </div>
+                    <!-- Nested row for non-featured blog posts-->
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <!-- Blog post-->
+                            <div class="card mb-4">
+                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
+                                <div class="card-body">
+                                    <div class="small text-muted">January 1, 2022</div>
+                                    <h2 class="card-title h4">Post Title</h2>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                </div>
+                            </div>
+                            <!-- Blog post-->
+                            <div class="card mb-4">
+                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
+                                <div class="card-body">
+                                    <div class="small text-muted">January 1, 2022</div>
+                                    <h2 class="card-title h4">Post Title</h2>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <!-- Blog post-->
+                            <div class="card mb-4">
+                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
+                                <div class="card-body">
+                                    <div class="small text-muted">January 1, 2022</div>
+                                    <h2 class="card-title h4">Post Title</h2>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                </div>
+                            </div>
+                            <!-- Blog post-->
+                            <div class="card mb-4">
+                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
+                                <div class="card-body">
+                                    <div class="small text-muted">January 1, 2022</div>
+                                    <h2 class="card-title h4">Post Title</h2>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam.</p>
+                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Pagination-->
+                    <nav aria-label="Pagination">
+                        <hr class="my-0" />
+                        <ul class="pagination justify-content-center my-4">
+{% if page_obj.has_previous %}
+    <li class="page-item"><a class="page-link"  href="?page={{ page_obj.previous_page_number }}">« Previous page</a></li>
+
+  {% if page_obj.number > 3 %}
+      <li class="page-item" aria-current="page"><a class="page-link" href="?page=1">1</a></li>
+    {% if page_obj.number > 4 %}
+       <li class="page-item disabled"><a class="page-link" href="#!"><span>...</span></a></li>
+    {% endif %}
+  {% endif %}
+{% endif %}
+
+{% for num in page_obj.paginator.page_range %}
+  {% if page_obj.number == num %}
+      <li class="page-item active"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+  {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+      <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+  {% endif %}
+{% endfor %}
+
+{% if page_obj.has_next %}
+  {% if page_obj.number < page_obj.paginator.num_pages|add:'-3' %}
+    <li class="page-item disabled"><a class="page-link" href="#!"><span>...</span></a></li>
+      <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>
+  {% elif page_obj.number < page_obj.paginator.num_pages|add:'-2' %}
+      <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>
+  {% endif %}
+
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next Page »</a></li>
+{% endif %}
+</ul>
+                    </nav>
+                </div>
+                <!-- Post search-->
+                <div class="col-lg-4">
+                    <!-- Search widget-->
+                    <div class="card mb-4">
+                        <div class="card-header">Post Search</div>
+                        <div class="card-body">
+                            <div class="input-group">
+                                <form method="get" action="{% url 'home:search' %}">
+                                    {% csrf_token %}
+                                    {{ post_search_form.errors.post_search }}
+                                    {{ post_search_form.post_search }}
+                                    <input type="submit" class="btn btn-primary" value="Go!">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4">
+                        <div class="card-header">People Search</div>
+                        <div class="card-body">
+                            <div class="input-group">
+                                <form method="get" action="{% url 'home:search' %}">
+                                    {% csrf_token %}
+                                    {{ people_search_form.errors.people_search }}
+                                    {{ people_search_form.people_search }}
+                                    <input type="submit" class="btn btn-primary" value="Go!">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </div>
 {% endblock %}
