--- a/frontend_sl/home/templates/home/search.html
+++ b/frontend_sl/home/templates/home/search.html
@@ -95,15 +95,15 @@ Search
                 </div>
 
 <!-- Pagination-->
-
+{% if post_search or people_search %}
 <nav aria-label="Pagination" class="pull-left">
 <hr class="my-4">
 <ul class="pagination justify-content-center my-4">
 {% if page_obj.has_previous %}
-    <li class="page-item"><a class="page-link"  href="?page={{ page_obj.previous_page_number }}">« Previous page</a></li>
+    <li class="page-item"><a class="page-link"  href="?page={{ page_obj.previous_page_number }}&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">Previous</a></li>
 
   {% if page_obj.number > 3 %}
-      <li class="page-item" aria-current="page"><a class="page-link" href="?page=1">1</a></li>
+      <li class="page-item" aria-current="page"><a class="page-link" href="?page=1&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">1</a></li>
     {% if page_obj.number > 4 %}
        <li class="page-item disabled"><a class="page-link" href="#!"><span>...</span></a></li>
     {% endif %}
@@ -112,25 +112,25 @@ Search
 
 {% for num in page_obj.paginator.page_range %}
   {% if page_obj.number == num %}
-      <li class="page-item active"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+      <li class="page-item active"><a class="page-link" href="?page={{ num }}&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">{{ num }}</a></li>
   {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-      <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{ num }}&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">{{ num }}</a></li>
   {% endif %}
 {% endfor %}
 
 {% if page_obj.has_next %}
   {% if page_obj.number < page_obj.paginator.num_pages|add:'-3' %}
     <li class="page-item disabled"><a class="page-link" href="#!"><span>...</span></a></li>
-      <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">{{ page_obj.paginator.num_pages }}</a></li>
   {% elif page_obj.number < page_obj.paginator.num_pages|add:'-2' %}
-      <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>
+      <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">{{ page_obj.paginator.num_pages }}</a></li>
   {% endif %}
 
-    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next Page »</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}&{% if post_search %}post_search={{ post_search }}{% else %}people_search={{ people_search }}{% endif %}">Next</a></li>
 {% endif %}
 </ul>
  </nav>
-
+{% endif %}
 
 
 
